WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219877
Fix null dereference in WKURLCopyCFURL
https://bugs.webkit.org/show_bug.cgi?id=219877
Summary
Fix null dereference in WKURLCopyCFURL
Alex Christensen
Reported
2020-12-14 16:04:18 PST
Fix null dereference in WKURLCopyCFURL
Attachments
Patch
(1.86 KB, patch)
2020-12-14 16:05 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-12-14 16:05:12 PST
Created
attachment 416201
[details]
Patch
Alex Christensen
Comment 2
2020-12-14 16:05:15 PST
<
rdar://problem/48921304
>
Geoffrey Garen
Comment 3
2020-12-14 16:10:49 PST
Comment on
attachment 416201
[details]
Patch r=me
EWS
Comment 4
2020-12-14 17:00:46 PST
Committed
r270810
: <
https://trac.webkit.org/changeset/270810
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416201
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug