Fix null dereference in WKURLCopyCFURL https://bugs.webkit.org/show_bug.cgi?id=219877 <rdar://problem/48921304>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-12-14
Reviewed by Geoffrey Garen.

We had an optimistic assertion and crash reports indicating that it is not always true.
When it's not, return null instead of crashing.

* Shared/API/c/cf/WKURLCF.mm:
(WKURLCopyCFURL):

Canonical link: https://commits.webkit.org/232464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270810 268f45cc-cd09-0410-ab3c-d52691b4dbfc